Add generic inventory page that shows AAI data
Issue-ID: PORTALNG-131
Change-Id: I1c71785b02fc5f7f5721cbee0e11e74d39d79b38
Signed-off-by: Fiete Ostkamp <Fiete.Ostkamp@telekom.de>

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -265,6 +265,7 @@
         "home": "Home",
         "appStarter": "App Starter",
         "dashboard": "Dashboard",
+        "inventory": "Inventar",
         "options": "Optionen",
         "userAdministration": "Benutzerverwaltung",
         "users": "Benutzer",
