--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -262,6 +262,7 @@
         "home": "Home",
         "appStarter": "App Starter",
         "dashboard": "Dashboard",
+        "inventory": "Inventory",
         "options": "Options",
         "userAdministration": "User Administration",
         "users": "Users",
